--- a/src/styles/ui-kit-pages.scss
+++ b/src/styles/ui-kit-pages.scss
@@ -15,8 +15,13 @@
   }
 }
 
-.section {
-  &_double-indent {
+.indentation {
+  &_double {
     margin-top: 20px;
   }
+}
+
+.pseudo-twins-line {
+  display: flex;
+  justify-content: space-between;
 }
