--- a/src/styles/ui-kit-pages.scss
+++ b/src/styles/ui-kit-pages.scss
@@ -19,9 +19,27 @@
   &_double {
     margin-top: 20px;
   }
+
+  &_wrap {
+    margin-bottom: 60px;
+  }
 }
 
 .pseudo-twins-line {
   display: flex;
   justify-content: space-between;
+}
+
+.form-elements-wrap {
+  &_top {
+    height: 600px;
+  }
+
+  &_middle {
+    height: 600px;
+  }
+
+  &_bottom {
+    height: 140px;
+  }
 }
