--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -112,11 +112,16 @@ block content
           ])
       .indentation_wrap.form-elements-wrap_bottom
         .indentation_single
-          +advantageBars([
+          +advantages([
             {
-              icon: 'insert_emotion',
+              icon: 'insert_emoticon',
               title: 'Комфорт',
-              brief: 'Шумопоглощающие стены',
+              brief: 'Шумопоглощающие стены'
+            },
+            {
+              icon: 'location_city',
+              title: 'Удобство',
+              brief: 'Окно в каждой из спален'
             }
           ])
     footer.ui-kit__footer
