--- a/src/components/ui-kit/advantage-bar/advantage-bar.scss
+++ b/src/components/ui-kit/advantage-bar/advantage-bar.scss
@@ -1,25 +1,35 @@
-.adv-block {
+@import "@variables";
+
+.advantages-block {
   width: 280px;
   height: 144px;
 
-  &__icon-bar {
+  &__text-bar {
+    display: flex;
+  }
+
+  &__icon {
+    position: relative;
     width: 48px;
     height: 48px;
   }
 
-  &__text-bar {
-    &_title {
+  &__text {
+    display: inherit;
+    flex-direction: column;
+
+    &__title {
       font-weight: bold;
     }
 
-    &_brief  {
+    &__brief  {
       font-weight: normal;
     }
   }
-
+  
   &__line-bar {
-    &_elem {
-
+    &__elem {
+      color: $valhalla;
     }
   }
 }
