--- a/src/components/ui-kit/dropdown/dropdown.pug
+++ b/src/components/ui-kit/dropdown/dropdown.pug
@@ -1,4 +1,4 @@
-mixin dropdownItem( item )
+mixin dropdowns( item )
   .dropdown.elem__border
     each option in item.options
       .dropdown__option
