--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -9,7 +9,7 @@ head
 
 block content
   body.ui-kit__body
-    +headerItem()
+    +header()
     main.ui-kit__main
       .indentation_wrap.form-elements-wrap_top
         .indentation_single
@@ -125,3 +125,4 @@ block content
             }
           ])
     footer.ui-kit__footer
+    
