--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -13,7 +13,7 @@ block content
     main.ui-kit__main
       .indentation_wrap.form-elements-wrap_top
         .indentation_single
-          +inputItems([
+          +inputs([
             {
               title: "text field",
               state: "default",
@@ -46,7 +46,7 @@ block content
             }
           ])
         .indentation_double.pseudo-twins-line
-          +inputItems([
+          +inputs([
             {
               title: "date dropdown",
               placeholder: "ДД.ММ.ГГГГ",
@@ -69,7 +69,7 @@ block content
             }
           ])
         .indentation_double
-          +inputItems([
+          +inputs([
             {
               title: "filter date dropdown",
               placeholder: "19 авг - 23 авг",
@@ -84,7 +84,7 @@ block content
         .indentation_double
       .indentation_wrap.form-elements-wrap_middle
         .indentation_single
-          +inputItems([
+          +inputs([
             {
               title: "dropdown",
               state: "default",
