Major file and mixins naming fixes 3

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -11,8 +11,8 @@ block content
   body.ui-kit__body
     +header()
     main.ui-kit__main
-      .indentation_wrap.form-elements-wrap_top
-        .indentation_single
+      .indention_wrap.form-elements-wrap_top
+        .indention_single
           +inputs([
             {
               title: "text field",
@@ -45,7 +45,7 @@ block content
               widthkey: 100
             }
           ])
-        .indentation_double.pseudo-twins-line
+        .indention_double.pseudo-twins-line
           +inputs([
             {
               title: "date dropdown",
@@ -68,7 +68,7 @@ block content
               }
             }
           ])
-        .indentation_double
+        .indention_double
           +inputs([
             {
               title: "filter date dropdown",
@@ -81,9 +81,9 @@ block content
               }
             }
           ])
-        .indentation_double
-      .indentation_wrap.form-elements-wrap_middle
-        .indentation_single
+        .indention_double
+      .indention_wrap.form-elements-wrap_middle
+        .indention_single
           +inputs([
             {
               title: "dropdown",
@@ -110,8 +110,8 @@ block content
               }
             }
           ])
-      .indentation_wrap.form-elements-wrap_bottom
-        .indentation_single
+      .indention_wrap.form-elements-wrap_bottom
+        .indention_single
           +advantages([
             {
               icon: 'insert_emoticon',
