Advantage-block is under construction 3

--- a/src/components/ui-kit/advantage-bar/advantage-bar.pug
+++ b/src/components/ui-kit/advantage-bar/advantage-bar.pug
@@ -3,7 +3,7 @@ mixin advantages( items=[] )
     .advantages-block
       .advantages-block__text-bar
         .advantages-block__icon
-          span.material-icons-outlined.icon-state #{item.icon}
+          span.material-icons-outlined #{item.icon}
         .advantages-block__text
           span.advantages-block__text__title #{item.title}
           span.advantages-block__text__brief #{item.brief}
