--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -17,20 +17,17 @@ block content
             {
               title: "text field",
               state: "default",
-              type: "email",
               placeholder: "Email",
-              widthkey: 100
+              type: "email",
             },
             {
               title: "text field",
               state: "hover / focus",
-              placeholder: "This is pretty awesome",
-              widthkey: 100
+              placeholder: "This is pretty awesome"
             },
             {
               title: "dropdown",
               placeholder: "Сколько гостей",
-              widthkey: 100,
               dropdown: {
                 options: [
                   "взрослые",
@@ -41,8 +38,7 @@ block content
             },
             {
               title: "masked text field",
-              placeholder: "ДД.ММ.ГГГГ",
-              widthkey: 100
+              placeholder: "ДД.ММ.ГГГГ"
             }
           ])
         .indention_double.pseudo-twins-line
