--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -1,3 +1,6 @@
 $valhalla: #1F2041;
 $perfume: #BC9CFF;
 $silver-tree: #6FCF97;
+
+$primary-gradient: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+$secondary-gradient: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
