--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -45,7 +45,7 @@ block content
             {
               title: "date dropdown",
               placeholder: "ДД.ММ.ГГГГ",
-              widthkey: 50,
+              keywidth: 50,
               dropdown: {
                 options: [
                   ""
@@ -55,7 +55,7 @@ block content
             {
               title: "date dropdown",
               placeholder: "19.08.2019",
-              widthkey: 50,
+              keywidth: 50,
               dropdown: {
                 options: [
                   ""
@@ -68,7 +68,7 @@ block content
             {
               title: "filter date dropdown",
               placeholder: "19 авг - 23 авг",
-              widthkey: 75,
+              keywidth: 75,
               dropdown: {
                 options: [
                   ""
@@ -92,7 +92,7 @@ block content
               title: "dropdown",
               state: "default",
               placeholder: "2 спальни, 2 кровати...",
-              widthkey: 75,
+              keywidth: 75,
               dropdown: {
                 options: [
                   ""
@@ -103,7 +103,7 @@ block content
               title: "dropdown",
               state: "expanded",
               placeholder: "2 спальни, 2 кровати...",
-              widthkey: 75,
+              keywidth: 75,
               dropdown: {
                 options: [
                   "спальни",
