Added new star-rate mixin

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -2,6 +2,7 @@ include ../components/ui-kit/header/header.pug
 include ../components/ui-kit/input/input.pug
 include ../components/ui-kit/dropdown/dropdown.pug
 include ../components/ui-kit/advantage-bar/advantage-bar.pug
+include ../components/ui-kit/star-rate/star-rate.pug
 
 head
   script(src='../src/components/ui-kit/dropdown/dropdown.js')   
@@ -83,6 +84,7 @@ body.ui-kit__body
             subscription: true
           }
         ])
+        +stars([4, 5])
     .indention_wrap.form-elements-wrap_middle
       .indention_single
         +inputs([
