Star-rate mixin is under construction

--- a/src/components/ui-kit/star-rate/star-rate.pug
+++ b/src/components/ui-kit/star-rate/star-rate.pug
@@ -6,6 +6,6 @@ mixin stars( ratings=[] )
       .star-rate
         while num < 5
           if num++ < rating
-            span.material-icons-outlined star 
+            span.material-icons-outlined.gradient-fill star 
           else 
-            span.material-icons-outlined star_border
+            span.material-icons-outlined.gradient-fill star_border
