Gradient color fill forwarded into separate class-selector

--- a/src/components/ui-kit/input/input.pug
+++ b/src/components/ui-kit/input/input.pug
@@ -17,4 +17,4 @@ mixin inputs( items=[] )
             span.input-icons.icon-style_dropdown.material-icons-outlined expand_more
             +dropdown( item.dropdown )
           else if item.subscription
-            span.input-icons.icon-style_subscription.material-icons-outlined arrow_forward
+            span.input-icons.icon-style_subscription.material-icons-outlined.gradient-fill arrow_forward
