--- a/src/styles/ui-kit-pages.scss
+++ b/src/styles/ui-kit-pages.scss
@@ -19,11 +19,11 @@
 
 .indention {
   &_double {
-    margin-block-start: 20px;
+    padding-top: 20px;
   }
 
   &_wrap {
-    margin-block-end: 60px;
+    padding-bottom: 60px;
   }
 }
 
