--- a/src/components/ui-kit/title-bar/title-bar.scss
+++ b/src/components/ui-kit/title-bar/title-bar.scss
@@ -6,6 +6,7 @@
   text-transform: uppercase;
   font-size: 12px;
   color: $valhalla;
+  margin-block: 20px 5px;
 
   &__title {
     font-weight: bold;
