--- a/src/styles/ui-kit-pages.scss
+++ b/src/styles/ui-kit-pages.scss
@@ -24,26 +24,25 @@
 
   &_wrap {
     padding-bottom: 60px;
+    display: grid;
+    grid-template-columns: repeat(3, 320px);
+    grid-gap: 72px;
+  }
+}
+
+.form-elements {
+  &__column {
+    width: 320px;
+
+    &_center {
+      padding-left: 44px;
+    }
   }
 }
 
 .pseudo-twins-line {
   display: flex;
   justify-content: space-between;
-}
-
-.form-elements-wrap {
-  &_top {
-    height: 660px;
-  }
-
-  &_middle {
-    height: 600px;
-  }
-
-  &_bottom {
-    height: 140px;
-  }
 }
 
 .frozen {
