--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -41,7 +41,7 @@ body.ui-kit__body
               placeholder: "ДД.ММ.ГГГГ"
             }
           ])
-        .indention_double.pseudo-twins-line
+        .indention_double.twinline-gap_longest
           +inputs([
             {
               title: "date dropdown",
@@ -88,7 +88,8 @@ body.ui-kit__body
           ])
       .form-elements__column.form-elements__column_center
         +titlebar("rate button")
-        +stars([4, 5])
+        .twinline-gap_null
+          +stars([4, 5])
       .form-elements__column.form-elements__column_right
     .form-elements__wrap_middle.indention_wrap
       .form-elements__column.form-elements__column_left
