--- a/src/components/ui-kit/like/like.scss
+++ b/src/components/ui-kit/like/like.scss
@@ -7,10 +7,13 @@
   border-style: solid;
   border-width: 1px;
   border-color: $valhalla;
+  color: $valhalla;
   opacity: .25;
+  font-size: 10px;
 
   &_toggled {
-    opacity: 1;
     border-color: $perfume;
+    color: $perfume;
+    opacity: 1;
   }
 }
