--- a/src/components/ui-kit/like/like.pug
+++ b/src/components/ui-kit/like/like.pug
@@ -1,6 +1,6 @@
-mixin buttonLike()
+mixin buttonLike( num )
   .like-btn
     .like-btn__icon
-      span.like-btn__icon__elem.material-icons-outlined
-    .like-btn__counter 
-      span.like-btn__counter__elem
+      span.material-icons-outlined favorite_border
+    .like-btn__counter
+      span #{num}
