--- a/src/components/ui-kit/like/like.scss
+++ b/src/components/ui-kit/like/like.scss
@@ -1,6 +1,7 @@
 @import "@variables";
 
 .like-btn {
+  display: flex;
   height: 20px;
   width: 40px;
   border-radius: 10px;
@@ -9,11 +10,33 @@
   border-color: $valhalla;
   color: $valhalla;
   opacity: .25;
-  font-size: 10px;
+  margin-right: 10px;
+  box-sizing: border-box;
 
   &_toggled {
     border-color: $perfume;
     color: $perfume;
     opacity: 1;
+  }
+
+  & span {
+    font-size: 10px;
+  }
+
+  &__icon {
+    position: relative;
+    display: inherit;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+  }
+
+  &__counter {
+    display: inherit;
+    justify-content: flex-start;
+    align-items: center;
+    & span {
+      line-height: 12px;
+    }
   }
 }
