--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -4,9 +4,11 @@ include ../components/ui-kit/dropdown/dropdown.pug
 include ../components/ui-kit/advantage-bar/advantage-bar.pug
 include ../components/ui-kit/star-rate/star-rate.pug
 include ../components/ui-kit/title-bar/title-bar.pug
+include ../components/ui-kit/like/like.pug
 
 head
-  script(src='../src/components/ui-kit/dropdown/dropdown.js')   
+  script(src='../src/components/ui-kit/dropdown/dropdown.js')
+  script(src='../src/components/ui-kit/like/like.js')
 
 body.ui-kit__body
   +header()
@@ -87,10 +89,16 @@ body.ui-kit__body
             }
           ])
       .form-elements__column.form-elements__column_center
-        .star-rate-block
-          +titlebar("rate button")
-          .star-rate__elem.twinline-gap_null
-            +stars([4, 5])
+        .indention_double
+          .block__like-btn
+            +titlebar("like button")
+            .like-btn__elem.twinline-gap_own.additional-padding
+              +buttonLike([2, 12])
+        .indention_double
+          .block__star-rate
+            +titlebar("rate button")
+            .star-rate__elem.twinline-gap_own.additional-padding
+              +stars([4, 5])
       .form-elements__column.form-elements__column_right
     .form-elements__wrap_middle.indention_wrap
       .form-elements__column.form-elements__column_left
