--- a/src/components/ui-kit/like/like.scss
+++ b/src/components/ui-kit/like/like.scss
@@ -12,6 +12,7 @@
   opacity: .25;
   margin-right: 10px;
   box-sizing: border-box;
+  cursor: pointer;
 
   &_toggled {
     border-color: $perfume;
@@ -21,6 +22,7 @@
 
   & span {
     font-size: 10px;
+    user-select: none;
   }
 
   &__icon {
@@ -35,7 +37,8 @@
     display: inherit;
     justify-content: flex-start;
     align-items: center;
-    & span {
+
+    & + span {
       line-height: 12px;
     }
   }
